--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "reference",
-  "version": "0.0.0",
-  "homepage" : "http://www.youtube.com/watch?v=cDuG95DXbw8",
+  "title": "Bible Reference Parser",
+  "version": "0.0.1",
+  "homepage" : "https://github.com/bibliaolvaso/reference",
   "author" : {
-    "name" : "Obi-Wan Kenobi"
+    "name" : "Laszlo Bacsi <lackac@lackac.hu>"
   },
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint" : "~0.6.0",
-    "grunt-contrib-uglify" : "~0.2.2",
     "grunt-contrib-concat" : "~0.3.0",
+    "grunt-contrib-jshint" : "~0.6.0",
+    "grunt-contrib-qunit"  : "~0.2.2",
+    "grunt-contrib-uglify" : "~0.2.2",
     "grunt-contrib-watch"  : "~0.4.4",
-    "matchdep"             : "~0.1.2",
-    "grunt-contrib-qunit"    : "~0.2.2"
+    "matchdep"             : "~0.1.2"
   }
 }
