--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "grunt-contrib-uglify" : "~0.2.2",
     "grunt-contrib-watch"  : "~0.4.4",
     "matchdep"             : "~0.1.2"
-  }
+  },
+  "licenses": [
+    { "type": "MIT" }
+  ]
 }
